# COMP3016-Audio-Visualiser

./: .gitignore  AudioProvider.cpp  AudioProvider.h  CMakeLists.txt  CMakeSettings.json  CameraMode.h  Coursework2.vcxproj  FrequencyProvider.cpp  FrequencyProvider.h  Orchestrator.cpp  Orchestrator.h  Project.cpp  Project.h  README.md  vcpkg.json
media/: triangles.frag  triangles.vert
models/: FileReader.cpp  FileReader.h  ModelDraw.cpp  ModelDraw.h
tests/: tests.h
utils/: utils.cpp  utils.h
window/: ImGUIWindow.cpp  ImGUIWindow.h
